<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jthure.connect4.android.NewGameFragment">

    <TextView
        android:id="@+id/tv_new_game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/tv_new_game_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:id="@+id/player_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_new_game_title"
        android:weightSum="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_add_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_player"
            />
        <Spinner
            android:id="@+id/spinner_player_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selected_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_selection"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_players_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_players_title" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_start_game"
        />

</RelativeLayout>
